Removed joi dependency, user has to install their prefered version.

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "homepage": "https://github.com/tlivings/enjoi",
   "dependencies": {
-    "core-util-is": "^1.0.1",
-    "joi": "^9.2.0"
+    "core-util-is": "^1.0.1"
   },
   "optionalDependencies": {
     "hammertime": "^0.1.4"
